account-team-history/force-app/main/default/objects/Account_Team_Member_History__c/Account_Team_Member_History__c.object-meta.xml
<CustomObject>
    <description>Stores a complete snapshot of Account Team Members associated with an Account, for both active and inactive (history) assignments.</description>
    <label>Account Team Member History</label>
    <nameField>
        <label>Account Team Member History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Team Member Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>