account-team-history/force-app/main/default/objects/Account_Team_Member_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The Account this record is associated with</description>
    <inlineHelpText>Associated Account Record</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Team Member Histories</relationshipLabel>
    <relationshipName>Account_Team_Member_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>