account-team-history/force-app/main/default/objects/Account_Team_Member_History__c/fields/Account_Access__c.field-meta.xml
<CustomField>
    <fullName>Account_Access__c</fullName>
    <description>Level of access the user had to the Account in their Team Member role. Populated via automation from the AccountAccessLevel field on the Account Team Member record.</description>
    <label>Account Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>