account-team-history/force-app/main/default/objects/Account_Team_Member_History__c/fields/Active_From__c.field-meta.xml
<CustomField>
    <fullName>Active_From__c</fullName>
    <description>Date when the User became an active Team Member to the Account</description>
    <label>Active From</label>
    <type>Date</type>
</CustomField>