account-team-history/force-app/main/default/objects/Account_Team_Member_History__c/fields/Active_To__c.field-meta.xml
<CustomField>
    <fullName>Active_To__c</fullName>
    <description>Date the User stopped being an associated Team Member for the Account</description>
    <label>Active To</label>
    <type>Date</type>
</CustomField>