account-team-history/force-app/main/default/objects/Account_Team_Member_History__c/fields/Added_By__c.field-meta.xml
<CustomField>
    <fullName>Added_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the user who added the Team Member. Used in conjunction with the Active From date field to create a clear who/when audit line for Account Team Member additions</description>
    <label>Added By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Team_Member_Histories1</relationshipName>
    <type>Lookup</type>
</CustomField>