account-team-history/force-app/main/default/objects/Account_Team_Member_History__c/fields/Case_Access__c.field-meta.xml
<CustomField>
    <fullName>Case_Access__c</fullName>
    <description>Level of access the user had to the Cases associated to the Account in their Team Member role. Populated via automation from the CaseAccessLevel field on the Account Team Member record.</description>
    <label>Case Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>