account-team-history/force-app/main/default/objects/Account_Team_Member_History__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Additional comments that can be added to provide flavor for the historical record.</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>