account-team-history/force-app/main/default/objects/Account_Team_Member_History__c/fields/Contact_Access__c.field-meta.xml
<CustomField>
    <fullName>Contact_Access__c</fullName>
    <description>Level of access the user had to the Contact associated to the Account in their Team Member role. Populated via automation from the ContactAccessLevel field on the Account Team Member record.</description>
    <label>Contact Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>