account-team-history/force-app/main/default/objects/Account_Team_Member_History__c/fields/Days_Active__c.field-meta.xml
<CustomField>
    <fullName>Days_Active__c</fullName>
    <description>Computes the number of active days the user has been in the assigned role</description>
    <formula>IF(ISBLANK(Active_To__c), TODAY() - Active_From__c, Active_To__c - Active_From__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days the user was assigned to the role for the account</inlineHelpText>
    <label>Days Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>