account-team-history/force-app/main/default/objects/Account_Team_Member_History__c/fields/Opportunity_Access__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Access__c</fullName>
    <description>Level of access the user had to the Opportunities tied to the Account in their Team Member role. Populated via automation from the OpportunityAccessLevel field on the Account Team Member record.</description>
    <label>Opportunity Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>