account-team-history/force-app/main/default/objects/Account_Team_Member_History__c/fields/Removed_By__c.field-meta.xml
<CustomField>
    <fullName>Removed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the user who removed the Team Member. Used in conjunction with the Active To date field to create a clear who/when audit line for Account Team Member removals</description>
    <label>Removed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Team_Member_Histories2</relationshipName>
    <type>Lookup</type>
</CustomField>