account-team-history/force-app/main/default/objects/Account_Team_Member_History__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User record of the assigned Team Member for the Account</description>
    <label>Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Team_Member_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>