account-team-history/force-app/main/default/objects/Account_Team_Member_History__c/fields/Team_Member_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Role__c</fullName>
    <description>Identifies the role the team member carried during their association with the Account. Populated via automation from the Team Role picklist on the Account Team Member object</description>
    <label>Team Member Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>