account-team-history/force-app/main/default/objects/Account_Team_Member_History__c/validationRules/Invalid_Active_To_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Active_To_Date</fullName>
    <active>true</active>
    <description>Checks to see if the Active To date field is set to a value earlier than that Active From date. A record can not cease before it began.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Active_To__c)), Active_To__c &lt; Active_From__c)</errorConditionFormula>
    <errorMessage>Active To date can not occur before Active From date</errorMessage>
</ValidationRule>